--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "private": true,
   "sideEffects": false,
+  "prisma": {
+    "seed": "npx ts-node prisma/seed.ts"
+  },
   "scripts": {
     "build": "run-s build:*",
     "build:css": "npm run generate:css -- --minify",
@@ -12,10 +15,12 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "@remix-run/node": "^1.6.3",
     "@remix-run/react": "^1.6.3",
     "@remix-run/serve": "^1.6.3",
     "npm-run-all": "^4.1.5",
+    "prisma": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
