--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "npm-run-all": "^4.1.5",
     "prisma": "^4.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.3",
