--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/node": "^1.6.3",
     "@remix-run/react": "^1.6.3",
     "@remix-run/serve": "^1.6.3",
+    "bcrypt": "^5.0.1",
     "npm-run-all": "^4.1.5",
     "prisma": "^4.0.0",
     "react": "^17.0.2",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.6.3",
     "@remix-run/eslint-config": "^1.6.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "autoprefixer": "^10.4.7",
